WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92861
[GTK] Memory leak found while running webaudio tests
https://bugs.webkit.org/show_bug.cgi?id=92861
Summary
[GTK] Memory leak found while running webaudio tests
Sudarsana Nagineni (babu)
Reported
2012-08-01 04:05:07 PDT
==31702== 256 (176 direct, 80 indirect) bytes in 2 blocks are definitely lost in loss record 15,594 of 16,879 ==31702== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==31702== by 0xCB08A38: g_malloc (gmem.c:159) ==31702== by 0xCB1BC62: g_slice_alloc (gslice.c:1003) ==31702== by 0xCB1C1A5: g_slice_alloc0 (gslice.c:1029) ==31702== by 0xC89C8B9: g_type_create_instance (gtype.c:1872) ==31702== by 0xC8810B8: g_object_constructor (gobject.c:1849) ==31702== by 0xC882C01: g_object_newv (gobject.c:1632) ==31702== by 0xC8831EB: g_object_new (gobject.c:1542) ==31702== by 0xC57D305: g_memory_input_stream_new_from_data (gmemoryinputstream.c:219) ==31702== by 0x7D5DD3C: WebCore::AudioFileReader::decodeAudioForBusCreation() (AudioFileReaderGStreamer.cpp:308) ==31702== by 0x7D5D2BE: WebCore::enteredMainLoopCallback(void*) (AudioFileReaderGStreamer.cpp:118) ==31702== by 0xCB038DA: g_timeout_dispatch (gmain.c:3859) ==31702== by 0xCB02C99: g_main_context_dispatch (gmain.c:2515) ==31702== by 0xCB0305F: g_main_context_iterate.isra.23 (gmain.c:3123) ==31702== by 0xCB03459: g_main_loop_run (gmain.c:3317) ==31702== by 0x7D5E041: WebCore::AudioFileReader::createBus(float, bool) (AudioFileReaderGStreamer.cpp:344) ==31702== by 0x7D5E456: WebCore::createBusFromInMemoryAudioFile(void const*, unsigned long, bool, float) (AudioFileReaderGStreamer.cpp:382) ==31702== by 0x7D107CD: WebCore::AudioBuffer::createFromAudioFileData(void const*, unsigned long, bool, float) (AudioBuffer.cpp:53) ==31702== by 0x7D16186: WebCore::AudioContext::createBuffer(WTF::ArrayBuffer*, bool, int&) (AudioContext.cpp:334) ==31702== by 0x7E891D3: WebCore::jsAudioContextPrototypeFunctionCreateBuffer2(JSC::ExecState*) (JSAudioContext.cpp:364) ==31702== by 0x7E892EE: WebCore::jsAudioContextPrototypeFunctionCreateBuffer(JSC::ExecState*) (JSAudioContext.cpp:376)
Attachments
Patch
(1.66 KB, patch)
2012-08-01 04:20 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-08-01 04:20:13 PDT
Created
attachment 155779
[details]
Patch
Philippe Normand
Comment 2
2012-08-01 06:33:16 PDT
Comment on
attachment 155779
[details]
Patch Thank you!
WebKit Review Bot
Comment 3
2012-08-01 07:33:48 PDT
Comment on
attachment 155779
[details]
Patch Clearing flags on attachment: 155779 Committed
r124333
: <
http://trac.webkit.org/changeset/124333
>
WebKit Review Bot
Comment 4
2012-08-01 07:33:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug