[GTK] Memory leak found while running webaudio tests https://bugs.webkit.org/show_bug.cgi?id=92861

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-08-01
Reviewed by Philippe Normand.

Fix a memory leak in decodeAudioForBusCreation by adopting
an allocation of GInputStream.

No new tests. No change in behavior.

* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::AudioFileReader::decodeAudioForBusCreation):

Canonical link: https://commits.webkit.org/110706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124333 268f45cc-cd09-0410-ab3c-d52691b4dbfc